==> abdelrhman1040/Digital-Electronic-Power-Load/Core/Src/ssd1306.c <==
#include "ssd1306.h"
#include <string.h> // For memset
#define SSD1306_WRITECOMMAND(command)      ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x00, (command))
#define SSD1306_WRITEDATA(data)            ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x40, (data))
#define ABS(x)   ((x) > 0 ? (x) : -(x))
#define SSD1306_RIGHT_HORIZONTAL_SCROLL              0x26
#define SSD1306_LEFT_HORIZONTAL_SCROLL               0x27
#define SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL 0x29
#define SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL  0x2A
#define SSD1306_DEACTIVATE_SCROLL                    0x2E // Stop scroll
#define SSD1306_ACTIVATE_SCROLL                      0x2F // Start scroll
#define SSD1306_SET_VERTICAL_SCROLL_AREA             0xA3 // Set scroll range
#define SSD1306_NORMALDISPLAY       0xA6
#define SSD1306_INVERTDISPLAY       0xA7

char SSD1306_Putc(char ch, FontDef_t* Font, SSD1306_COLOR_t color) {
	if (SSD1306_WIDTH <= (SSD1306.CurrentX + Font->FontWidth) || SSD1306_HEIGHT <= (SSD1306.CurrentY + Font->FontHeight)) {
		return 0;
	}

	for (uint32_t i = 0; i < Font->FontHeight; i++) {
		uint32_t b = Font->data[(ch - 32) * Font->FontHeight + i];
		for (uint32_t j = 0; j < Font->FontWidth; j++) {
			if ((b << j) & 0x8000) {
				SSD1306_DrawPixel(SSD1306.CurrentX + j, (SSD1306.CurrentY + i), (SSD1306_COLOR_t) color);
			} else {
				SSD1306_DrawPixel(SSD1306.CurrentX + j, (SSD1306.CurrentY + i), (SSD1306_COLOR_t)!color);
			}
		}
	}

	SSD1306.CurrentX += Font->FontWidth;
	return ch;
}

void ssd1306_I2C_WriteMulti(uint8_t address, uint8_t reg, uint8_t* data, uint16_t count) {
    HAL_I2C_Mem_Write(&hi2c2, address, reg, I2C_MEMADD_SIZE_8BIT, data, count, 100);
}

void ssd1306_I2C_Write(uint8_t address, uint8_t reg, uint8_t data) {
    HAL_I2C_Mem_Write(&hi2c2, address, reg, I2C_MEMADD_SIZE_8BIT, &data, 1, 10);
}
